<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/readsms_button"
        android:onClick="doReadSMS"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tpButton"
            android:layout_width="1dip"
            android:layout_weight="45"
            android:layout_height="wrap_content"
            android:text="@string/take_pic_button"
            android:onClick="tpConverter"/>
        <Button
            android:id="@+id/spButton"
            android:layout_width="2dip"
            android:layout_weight="55"
            android:layout_height="wrap_content"
            android:text="@string/select_pic_button"
            android:onClick="spConverter"/>
    </LinearLayout>

    <EditText
        android:id="@+id/textmsgId"
        android:layout_width="match_parent"
        android:layout_height="171dp"
        android:ems="50"
        android:gravity="start|top"
        android:hint="@string/predict_text"
        android:inputType="textMultiLine" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/predict_button"
        android:onClick="doPredict"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="169dp"
        android:layout_margin="2dp"
        android:background="@color/cardview_shadow_end_color">

        <TextView
            android:id="@+id/predicttvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/cardview_shadow_end_color"
            android:hint="@string/predict_result" />
    </ScrollView>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imageId"
        android:contentDescription="@string/CapturedImg" />

</LinearLayout>